fixing some small bugs